add comments on functions

--- a/Code_Interview_Linked_Queue_Stacks.ipynb
+++ b/Code_Interview_Linked_Queue_Stacks.ipynb
@@ -353,14 +353,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing test_mergeLinkedLists.py\n"
+      "Overwriting test_mergeLinkedLists.py\n"
      ]
     }
    ],
@@ -371,9 +371,11 @@
     "\n",
     "def mergeLinkedLists(linkedList_one, linkedList_two):\n",
     "    new_linked_list = LinkedList()\n",
+    "    # Get the head nodes of the input linked lists\n",
     "    p1 = linkedList_one.head\n",
     "    p2 = linkedList_two.head\n",
-    "    \n",
+    "\n",
+    "    # Traverse both linked lists and append the nodes to the new linked list in sorted order\n",
     "    while p1 and p2:\n",
     "        if p1.data < p2.data:\n",
     "            new_linked_list.append(p1.data)\n",
@@ -381,17 +383,19 @@
     "        else:\n",
     "            new_linked_list.append(p2.data)\n",
     "            p2 = p2.next\n",
-    "    \n",
+    "\n",
+    "    # If there are any remaining nodes in linkedList_one, append them to the new linked list\n",
     "    while p1:\n",
     "        new_linked_list.append(p1.data)\n",
     "        p1 = p1.next\n",
-    "    \n",
+    "\n",
+    "    # If there are any remaining nodes in linkedList_two, append them to the new linked list\n",
     "    while p2:\n",
     "        new_linked_list.append(p2.data)\n",
     "        p2 = p2.next\n",
-    "    \n",
-    "    return new_linked_list\n",
     "\n",
+    "    # Return the new merged linked list\n",
+    "    return new_linked_list\n",
     "\n",
     "\n",
     "@pytest.fixture(scope=\"session\")\n",
@@ -706,14 +710,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing test_stack.py\n"
+      "Overwriting test_stack.py\n"
      ]
     }
    ],
@@ -725,19 +729,20 @@
     "def sunsetViews(buildings, direction):\n",
     "    n = len(buildings)\n",
     "    result = Stack()\n",
-    "    \n",
+    "\n",
     "    # loop through buildings in the direction of the facing direction\n",
     "    if direction == 'EAST':\n",
     "        start, end, step = 0, n, 1\n",
     "    else:\n",
     "        start, end, step = n - 1, -1, -1\n",
     "\n",
+    "    # traverse the list of building heights and find buildings with unobstructed view\n",
     "    for i in range(start, end, step):\n",
     "        while result.length > 0 and buildings[i] >= buildings[result.peek()]:\n",
-    "            result.pop()\n",
-    "        result.push(i)\n",
+    "            result.pop()    # remove buildings shorter than the current building\n",
+    "        result.push(i)      # add the index of the current building to the stack\n",
     "\n",
-    "    return sorted(list(result))\n",
+    "    return sorted(list(result))  # return the indices of the buildings with unobstructed view, sorted in ascending order\n",
     "\n",
     "\n",
     "@pytest.fixture(scope=\"session\")\n",
@@ -894,35 +899,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1mTest session starts (platform: linux, Python 3.7.3, pytest 7.3.0, pytest-sugar 0.9.7)\u001b[0m\n",
-      "cachedir: .pytest_cache\n",
-      "rootdir: /home/magalu/ED2\n",
-      "plugins: sugar-0.9.7\n",
-      "collected 13 items                                                             \u001b[0m\n",
-      "\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_1\u001b[0m \u001b[32m✓\u001b[0m                                           \u001b[32m8% \u001b[0m\u001b[40m\u001b[32m▊\u001b[0m\u001b[40m\u001b[32m         \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_2\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m15% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▋        \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_3\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m23% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▍       \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_4\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m31% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▏      \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_5\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m38% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▉\u001b[0m\u001b[40m\u001b[32m      \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_6\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m46% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▋     \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_7\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m54% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▍    \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_8\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m62% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▎   \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_9\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m69% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▉\u001b[0m\u001b[40m\u001b[32m   \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_10\u001b[0m \u001b[32m✓\u001b[0m                                         \u001b[32m77% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▊  \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_11\u001b[0m \u001b[32m✓\u001b[0m                                         \u001b[32m85% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▌ \u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_12\u001b[0m \u001b[32m✓\u001b[0m                                         \u001b[32m92% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▎\u001b[0m\n",
-      " \u001b[36mtest_stack.py\u001b[0m::test_13\u001b[0m \u001b[32m✓\u001b[0m                                        \u001b[32m100% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\n",
-      "\n",
-      "Results (0.05s):\n",
-      "\u001b[32m      13 passed\u001b[0m\n"
+      "\u001b[1mTest session starts (platform: linux, Python 3.7.3, pytest 7.3.0, pytest-sugar 0.9.7)\u001b[0m\r\n",
+      "cachedir: .pytest_cache\r\n",
+      "rootdir: /home/magalu/ED2\r\n",
+      "plugins: sugar-0.9.7\r\n",
+      "\u001b[1mcollecting ... \u001b[0m\u001b[1m\r",
+      "collected 13 items                                                             \u001b[0m\r\n",
+      "\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_1\u001b[0m \u001b[32m✓\u001b[0m                                           \u001b[32m8% \u001b[0m\u001b[40m\u001b[32m▊\u001b[0m\u001b[40m\u001b[32m         \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_2\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m15% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▋        \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_3\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m23% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▍       \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_4\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m31% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▏      \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_5\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m38% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▉\u001b[0m\u001b[40m\u001b[32m      \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_6\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m46% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▋     \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_7\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m54% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▍    \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_8\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m62% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▎   \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_9\u001b[0m \u001b[32m✓\u001b[0m                                          \u001b[32m69% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▉\u001b[0m\u001b[40m\u001b[32m   \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_10\u001b[0m \u001b[32m✓\u001b[0m                                         \u001b[32m77% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▊  \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_11\u001b[0m \u001b[32m✓\u001b[0m                                         \u001b[32m85% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▌ \u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_12\u001b[0m \u001b[32m✓\u001b[0m                                         \u001b[32m92% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m▎\u001b[0m\r",
+      "\r\n",
+      "\r",
+      " \u001b[36mtest_stack.py\u001b[0m::test_13\u001b[0m \u001b[32m✓\u001b[0m                                        \u001b[32m100% \u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\u001b[40m\u001b[32m█\u001b[0m\r\n",
+      "\r\n",
+      "Results (0.04s):\r\n",
+      "\u001b[32m      13 passed\u001b[0m\r\n"
      ]
     }
    ],
